--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "react-web-share": "^2.0.2",
     "sass": "^1.85.0",
