--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.5",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "react-type-animation": "^3.2.0",
     "react-web-share": "^2.0.2",
     "sass": "^1.85.0",
     "viem": "^2.23.2",
